# busbar-sf-types

./: .gitignore  ATTRIBUTION.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SITE_README.md  missing_categories.json  missing_overlays.json  package-lock.json  package.json  playwright.config.js  pnpm-lock.yaml  tailwind.config.js  vite.config.js
.CONTEXT/: edutb
.devcontainer/: devcontainer.json
.github/: AGENT_OVERLAY_RESEARCH.md  dependabot.yml
.github/ISSUE_TEMPLATE/: typegen-missing-categorization.yml  typegen-missing-overlay.yml
.github/actions/typegen-issues/: index.js
.github/workflows/: ci.yml  pages.yml  release.yml  update-types.yml
.typegen-reports/: missing_overlays.json
assets/: README.md  type-graph.dot  type-graph.json
crates/metadata-cli/: Cargo.toml  build.rs
crates/metadata-cli/src/: main.rs
crates/metadata-integration/: Cargo.toml
crates/metadata-integration/src/: main.rs
crates/sf-types/: Cargo.toml  README.md  build.rs
crates/sf-types/examples/: test_empty_vec.rs  xml_demo.rs
crates/sf-types/src/: generated_registry.rs  generated_salesforce_types.rs  lib.rs  prelude.rs  trait_impls.rs  traits.rs  uncategorized.rs
crates/sf-types/src/common/: enums.rs  mod.rs
crates/sf-types/src/metadata/: activation.rs  ai.rs  analytics.rs  apex.rs  applications.rs  assessments.rs  automation.rs  batch.rs  bots.rs  briefcase.rs  businessrules.rs  callcenter.rs  channels.rs  codecoverage.rs  commerce.rs  components.rs  conditions.rs  copilot.rs  cpq.rs  custommetadata.rs  datacloud.rs  decisions.rs  deploy.rs  digitalexperience.rs  discovery.rs  documents.rs  email.rs  experience.rs  explainability.rs  externalapps.rs  features.rs  feed.rs  fieldmappings.rs  flows.rs  folders.rs  forecasting.rs  homepage.rs  identity.rs  industries.rs  integration.rs  (+42 more)
crates/sf-types/src/packaging/: mod.rs  packages.rs
crates/sf-types/src/settings/: mod.rs  org_settings.rs
crates/sf-types/tests/: xml_complex_test.rs  xml_metadata_test.rs  xml_test.rs
docs/: app.js  index.html  style.css  type-graph.json
docs/assets/: index-1BLcn5iG.css  index-B-QGJqVa.js  index-C2sz4-8E.css  index-CE4EaXpr.css  index-E6SqVeAM.js  index-rBD06BCv.js
scripts/: generate.sh
sf-generated-types/: Cargo.toml  README.md
sf-generated-types/src/: generated_salesforce_types.rs  lib.rs  trait_impls.rs  traits.rs  uncategorized.rs
sf-generated-types/src/common/: enums.rs
sf-generated-types/src/metadata/: activation.rs  ai.rs  analytics.rs  apex.rs  applications.rs  assessments.rs  automation.rs  batch.rs  bots.rs  briefcase.rs  businessrules.rs  callcenter.rs  channels.rs  codecoverage.rs  commerce.rs  components.rs  conditions.rs  copilot.rs  cpq.rs  custommetadata.rs  datacloud.rs  decisions.rs  deploy.rs  digitalexperience.rs  discovery.rs  documents.rs  email.rs  experience.rs  explainability.rs  externalapps.rs  features.rs  feed.rs  fieldmappings.rs  flows.rs  folders.rs  forecasting.rs  homepage.rs  identity.rs  industries.rs  integration.rs  (+41 more)
sf-generated-types/src/packaging/: packages.rs
sf-generated-types/src/settings/: mod.rs  settings.rs
sf-typegen/: Cargo.toml  overlays.toml
sf-typegen/src/: build_utils.rs  categories.rs  categorization.rs  graph.rs  lib.rs  modular_generator.rs  traits_gen.rs
sf-wsdl/: Cargo.toml
sf-wsdl/src/: build_utils.rs  categories.rs  error.rs  lib.rs  modular_generator.rs  traits_gen.rs
site/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
site/src/: App.jsx  main.jsx  styles.css
site/src/components/: CategoryFilters.jsx  Dashboard.jsx  GraphVisualization.jsx  Header.jsx  Hero.jsx  NavigationTree.jsx  Sidebar.jsx  SimpleTabs.jsx  StatsBar.jsx  TypeDetailView.jsx  TypeDetails.jsx  TypeNetwork.jsx  TypeTable.jsx  TypeTreemap.jsx
site/src/utils/: dataProcessing.js
tests/: graph-viewer.spec.js
