[workspace]
resolver = "2"
members = [
    "sf-generated-types",
    "sf-wsdl",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Jason Lantz <jason@kantext.dev>"]
license = "BSD-3-Clause"
repository = "https://github.com/kantext-dev/busbar-sf-types"

[workspace.dependencies]
# Core dependencies
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"

# Async runtime
tokio = { version = "1.45", features = ["full"] }
async-trait = "0.1"

# HTTP
reqwest = { version = "0.12", features = ["json"] }
http = "1.3"

# XML/WSDL parsing
roxmltree = "0.20"
xsd-parser = "1.3"
regex = "1.10"

# Utilities
tempfile = "3.0"

# Internal path dependencies
sf-generated-types = { path = "sf-generated-types" }
sf-wsdl = { path = "sf-wsdl" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
