[package]
name = "sf-typegen"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Internal TypeScript → Rust code generation utilities for busbar-sf-types"

[dependencies]
# Regex for fallback extraction
regex.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
toml = "0.9"

# TypeScript AST parsing - using oxc
oxc_parser = "0.111"
oxc_ast = "0.111"
oxc_allocator = "0.111"
oxc_span = "0.111"
oxc_diagnostics = "0.111"

# Code generation utilities
convert_case = "0.10"

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Async runtime
tokio.workspace = true

# HTTP client for fetching from GitHub
reqwest = { workspace = true, features = ["blocking"] }
async-trait.workspace = true
http.workspace = true

# Temporary file handling
tempfile.workspace = true

[features]
default = ["build-utils"]
# Feature for build script utilities
build-utils = []
