[package]
name = "metadata-cli"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
clap = { version = "4.3", features = ["derive"] }
roxmltree = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
quick-xml = { version = "0.39.0", features = ["serialize"] }
# Re-enable full dependency on generated types as requested
busbar-sf-types = { path = "../sf-types", features = ["full"] }
